feat: locker files (dto, controller, model, mapper)